# spatial-voting

./: CHANGELOG.md  README.md  spatial-voting.cabal
app/: Main.hs  Options.hs
src/: Dist.hs  Elections.hs  Model.hs  Voting.hs
